# micro-mind

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  agents.md  lessons.md
.github/workflows/: bench-compare.yml  ci.yml
bench/: PREDICATES.md  README.md  STRESS-PROTOCOL.md  ablations.md
bench/archive/: 12-edit-file-read-or-write-pre-auto-read.toml  README.md
bench/audits/: 2026-05-17-archive-vs-main.md
bench/baselines/: README.md
bench/baselines/2026-05-15-main/: 01-read-readme-rep0.jsonl  01-read-readme-rep1.jsonl  02-list-rust-files-rep0.jsonl
bench/baselines/2026-05-15-with-length/: 02-list-rust-files-rep0.jsonl  03-decline-irrelevant-rep0.jsonl  04-length-truncation-rep0.jsonl  summary.json
bench/baselines/main/: 01-read-readme-rep0.jsonl  01-read-readme-rep1.jsonl  01-read-readme-rep2.jsonl  02-list-rust-files-rep0.jsonl  02-list-rust-files-rep1.jsonl  02-list-rust-files-rep2.jsonl  03-decline-irrelevant-rep0.jsonl  03-decline-irrelevant-rep1.jsonl  03-decline-irrelevant-rep2.jsonl  04-length-truncation-rep0.jsonl  04-length-truncation-rep1.jsonl  04-length-truncation-rep2.jsonl  06-edit-file-rep0.jsonl  (+28 more)
bench/samples/: sample-fixture.toml  sample-trace.jsonl
bench/tasks/: 01-read-readme.toml  02-list-rust-files.toml  03-decline-irrelevant.toml  04-length-truncation.toml  05-write-from-scratch.toml  06-edit-file.toml  07-grep-many-matches.toml  08-bash.toml  09-dedup-untriggered.toml  10-write-pressure-untriggered.toml  11-write-file-placeholder.toml  12-edit-file-read-or-write.toml  13a-length-write-file-bulk.toml
obs/: schema.md
src/: config.rs  lib.rs  main.rs  server.rs
src/agent/: coach.rs  compress.rs  context.rs  guards.rs  mod.rs
src/bench/: fixture.rs  mod.rs  summary.rs  trace.rs
src/llm/: client.rs  mod.rs  prompt.rs  types.rs
src/obs/: mod.rs  recorder.rs
src/repl/: mod.rs  render.rs
src/tools/: cache.rs  fs_read.rs  fs_utils.rs  fs_write.rs  mod.rs  shell.rs
(+16 files in other folders)
