[package]
name = "micro-mind"
version = "0.1.0"
edition = "2024"
description = "Claude Code clone powered by qwen25-1.5b-instruct via llama-server"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "14"
ignore = "0.4"
walkdir = "2"
regex = "1"
shlex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal"] }
colored = "2"

[features]
default = []
live = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
